manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgndevs-demoapp
  namespace: tgndevs
spec:
  replicas: 4
  selector:
    matchLabels:
      app: tgndevs-demoapp
  template:
    metadata:
      labels:
        app: tgndevs-demoapp
    spec:
      containers:
      - name: demoapp
        image: docker.io/tgndevs/demoapp:1.9.4 # {"$imagepolicy": "tgndevs:demoapp"}
        ports:
        - containerPort: 8080
        # env:
        # - name: MESSAGE
        #   value: Hello World!
