manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgndevs-demoapp
  namespace: tgndevs
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: tgndevs-demoapp
