manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tgndevs-demoapp
  namespace: tgndevs
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tgndevs-demoapp.7069387bdbdb47cfae92.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: tgndevs-demoapp
          servicePort: 80
        path: /
